2003-12-02 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add options amazon.imgsize and amazon.nodefault. thanx KOMORIYA.
	* amazon.rb: remove options amazon.smallimg.
	* amazon.rb: split ja resource.

2003-12-01 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add options amazon.smallimg and amazon.hidename. thanx KOMORIYA.

2003-11-26 nt <nt@be.to>
	* tlink.rb: use @conf.base_url.

2003-11-25 zunda <zunda at freeshell.org>
	* weather.rb: avoid showing duplicated translation like mist/mist, thanks toshi-san.

2003-11-19 Junichiro Kita <kita@kitaj.no-ip.com>
	* tb-send.rb, tb-show.rb, makelirs.rb, output_rdf.rb: use @conf.base_url

2003-11-18 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb, en/disp_referer.rb: hopefully more usable config menu
	* Thanks to Kazuhiro NISHIYAMA, TADA Tadashi, NISHIMURA Takashi, ysano, Daigo Moriwaki, and mass.

2003-11-19  Kazuhiko  <kazuhiko@fdiary.net>
	* output_rdf.rb: escape @html_title. support hidden diary.

2003-11-17 TADA Tadashi <sho@spc.gr.jp>
	* edit.rb: remove.

2003-11-14 TADA Tadashi <sho@spc.gr.jp>
	* append-css.rb: add "type" attr and comment tag.
	* random_google.rb: remove TARGET attr from A element.
	* html_anchor.rb: add come comments.

2003-11-13 TADA Tadashi <sho@spc.gr.jp>
	* nazo.rb: removed.
	* highlight.rb: nazo.rb modified and added. thanks to ZnZ <zn@mbf.nifty.com>

2003-11-11  Kazuhiko  <kazuhiko@fdiary.net>
	* comment_rank.rb: fix XSS.

2003-11-10 Junichiro Kita <kita@kitaj.no-ip.com>
	* tb-show.rb: fix XSS.

2003-11-10 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: i18n, but not support UTF-8.
	* tb-show.rb, trackback/tb.rb: i18n.

2003-11-09 Junichiro Kita <kita@kitaj.no-ip.com>
	* amazon.rb: fix bug in amazonNoImg.

2003-11-07 TADA Tadashi <sho@spc.gr.jp>
	* output_rdf.rb: add information to HTML header for Auto-Discovery. thanks mput.
	* output_rdf.rb: i18n.

2003-11-05 zunda <zunda at freesehll.org>
	* ja/weather.rb: added `(partial )?(freezing )?' to `fog', ignore `patches of'
